Closed Bug 1220599 Opened 9 years ago Closed 9 years ago

Fix erroneous nsHTMLDocument::Open comment to note that we reuse the document rather than creating a new one

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

Details

Attachments

(1 file)

      No description provided.
Attached patch patchSplinter Review
Attachment #8681879 - Flags: review?(amarchesini)
Attachment #8681879 - Flags: review?(amarchesini) → review+
https://hg.mozilla.org/mozilla-central/rev/0f09e1b4ef1d
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: